@@ -141,6 +141,9 @@ Build
 
 - Issue #8509: Fix quoting in help strings and code snippets in configure.in.
 
+- Issue #3646: It is now easily possible to install a Python framework into
+  your home directory on MacOSX, see Mac/README for more information.
+
 
 What's New in Python 2.7 beta 1?
 ================================
